--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
         <!-- PAGE 2: Procedure -->
         <div id="page2" class="page">
-            <div class="procedure-section">
+           <div class="container">
                 <div class="procedure-header">
                     <div class="procedure-icon">🔒</div>
                     <div class="procedure-title">Procedura: Gestione Data Breach</div>
