--- a/index.html
+++ b/index.html
@@ -451,10 +451,10 @@
 
         <!-- PAGE 2: Procedure -->
         <div id="page2" class="page">
-           <div class="container">
+           <div class="procedure-section">
                 <div class="procedure-header">
                     <div class="procedure-icon">🔒</div>
-                    <div class="procedure-title">Procedura: Gestione Data Breach</div>
+                    <h2>Procedura: Gestione Data Breach</h2>
                 </div>
                 <div class="procedure-instruction">
                     💡 Trascina gli step nella sequenza corretta per gestire un data breach
